Bug 107218 - browser component chooser ignores filepath from open dialog
Summary: browser component chooser ignores filepath from open dialog
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-06-11 15:37 UTC by Michal Ceresna
Modified: 2009-06-22 03:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bug1.png (96.91 KB, image/png)
2005-06-11 15:38 UTC, Michal Ceresna
Details
bug2.png (101.27 KB, image/png)
2005-06-11 15:39 UTC, Michal Ceresna
Details
bug3.png (96.79 KB, image/png)
2005-06-11 15:39 UTC, Michal Ceresna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Ceresna 2005-06-11 15:37:53 UTC
Version:            (using KDE KDE 3.4.1)
Installed from:    RedHat RPMs

1)open kcontrol/KDE components/Component Chooser/Web Browser (bug1.png)
2)switch the radio button to "in the following browser"
3)open the file dialog and enter into textfield path to some exacutable (bug2.png)
4)close the dialog with ok

the entered text does not appear in the "in the following browser" textfield
(bug3.png)
Comment 1 Michal Ceresna 2005-06-11 15:38:31 UTC
Created attachment 11399 [details]
bug1.png
Comment 2 Michal Ceresna 2005-06-11 15:39:06 UTC
Created attachment 11400 [details]
bug2.png
Comment 3 Michal Ceresna 2005-06-11 15:39:39 UTC
Created attachment 11401 [details]
bug3.png
Comment 4 clcevboxvjeo 2006-03-02 20:17:34 UTC
Confirmed in KDE 3.5.1. When choosing the app from the file browser (like on the screenshots above), there's a blank line. But when I write it manually there it works.
Comment 5 FiNeX 2008-11-11 22:21:52 UTC
Confirmed in KDE4 too.
Comment 6 Christoph Feck 2009-06-22 03:19:18 UTC
SVN commit 985067 by cfeck:

Fix empty browser service

When selecting a browser by typing in the command, KOpenWithDialog
creates a temporary service(). This temporary service does not have
a desktopEntryName(), so we should display exec() instead.

BUG: 107218


 M  +5 -3      componentchooserbrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=985067