Fix empty browser service

When selecting a browser by typing in the command, KOpenWithDialog
creates a temporary service(). This temporary service does not have
a desktopEntryName(), so we should display exec() instead.

BUG: 107218

svn path=/trunk/KDE/kdebase/runtime/; revision=985067